fix: margin on mobile resolution

--- a/style.css
+++ b/style.css
@@ -958,6 +958,12 @@ body {
         margin-top: 35px;
         gap: 20px;
     }
+    .cards__item:nth-child(4) {
+        margin-bottom: 37px;
+    }
+    .cards__item:nth-child(5) {
+        margin-bottom: 37px;
+    }
 }
 @media (max-width: 570px) {
     .header__burger-btn {
@@ -1138,7 +1144,7 @@ body {
         margin-bottom: 34px;
     }
     .cards__item:nth-child(6) {
-        margin-bottom: 24px;
+        margin-bottom: 27px;
     }
     .prices__wrapper {
         justify-content: center;
@@ -1174,6 +1180,7 @@ body {
     .contacts__info {
         align-items: center;
         margin-top: -20px;
+        margin-bottom: 0;
     }
     .contacts__button {
         max-width: 121px;
